Fix horizontal scrollbar appearing

--- a/shows.scss
+++ b/shows.scss
@@ -503,7 +503,7 @@ table {
 }
 
 hr.separator {
-  width: calc(100% + 40px);
+  width: calc(100% + 38px);
   margin-left: -20px;
   border: 1px dashed rgba(0, 0, 0, 0.25);
 }
